--- a/TwoWayRecyclerView/app/src/main/res/layout/timeline_item.xml
+++ b/TwoWayRecyclerView/app/src/main/res/layout/timeline_item.xml
@@ -3,13 +3,15 @@
     android:layout_width="@dimen/epg_width_thirty_min"
     android:layout_height="@dimen/epg_timeline_height"
     android:layout_gravity="center"
-    android:background="@color/default_color"
+    android:background="@android:color/black"
+    android:paddingRight="1px"
     android:orientation="vertical">
 
     <TextView
         android:id="@+id/text_timeline"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/default_color"
         android:gravity="center_vertical"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textColor="@android:color/white" />
