--- a/TwoWayRecyclerView/app/src/main/res/values/dimen.xml
+++ b/TwoWayRecyclerView/app/src/main/res/values/dimen.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="epg_item_container_height">80dp</dimen>
-    <dimen name="epg_width_one_min">6dp</dimen>
+    <dimen name="epg_width_one_min">2dp</dimen>
     <dimen name="epg_width_thirty_min">180dp</dimen>
+    <dimen name="epg_width_fifteen_min">90dp</dimen>
     <dimen name="epg_timeline_height">41dp</dimen>
 </resources>
