Now indicator functionality added

--- a/TwoWayRecyclerView/app/src/main/res/layout/activity_main.xml
+++ b/TwoWayRecyclerView/app/src/main/res/layout/activity_main.xml
@@ -5,29 +5,11 @@
     android:layout_height="match_parent"
     tools:context="project.samp.mariusduna.twowayrecyclerview.MainActivity">
 
-    <TextView
-        android:id="@+id/current_time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/channels_recycler_view"
-        android:gravity="center"
-        android:text="EPG!"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:layout_toStartOf="@+id/timeline_recycler_view" />
-
     <android.support.v7.widget.RecyclerView
         android:id="@+id/timeline_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="41dp"
         android:layout_toEndOf="@+id/channels_recycler_view"
-        android:background="#fff" />
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/channels_recycler_view"
-        android:layout_width="@dimen/epg_item_container_height"
-        android:layout_height="match_parent"
-        android:layout_below="@id/timeline_recycler_view"
         android:background="#fff" />
 
     <android.support.v7.widget.RecyclerView
@@ -44,18 +26,38 @@
         android:layout_height="match_parent"
         android:layout_alignParentStart="true"
         android:layout_alignTop="@+id/channels_recycler_view"
+        android:layout_marginTop="-6dp"
         android:background="@android:color/white" />
 
     <TextView
         android:id="@+id/epg_now_indicator"
         android:layout_width="65dp"
-        android:layout_height="36dp"
-        android:layout_above="@+id/epg_now_line"
-        android:layout_toStartOf="@+id/epg_now_line"
+        android:layout_height="48dp"
+        android:background="@drawable/ic_now_center"
         android:clickable="true"
+        android:gravity="center"
         android:text="@string/mini_epg_now_header"
         android:textAllCaps="true"
-        android:background="@drawable/ic_now_center"
         android:textColor="@android:color/white"
         android:textSize="12sp" />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/channels_recycler_view"
+        android:layout_width="@dimen/epg_item_container_height"
+        android:layout_height="match_parent"
+        android:layout_below="@id/timeline_recycler_view"
+        android:background="#fff" />
+
+    <TextView
+        android:id="@+id/current_time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/channels_recycler_view"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_toStartOf="@+id/timeline_recycler_view"
+        android:background="@color/default_color_dark"
+        android:gravity="center"
+        android:text="EPG!"
+        android:textColor="@android:color/white" />
 </RelativeLayout>
