--- a/TwoWayRecyclerView/app/src/main/res/layout/program_item.xml
+++ b/TwoWayRecyclerView/app/src/main/res/layout/program_item.xml
@@ -14,6 +14,7 @@
         android:layout_height="0dp"
         android:layout_weight="0.4"
         android:background="@color/default_color"
+        android:clickable="true"
         android:gravity="center_vertical"
         android:singleLine="true"
         android:textColor="@android:color/white"
@@ -25,6 +26,7 @@
         android:layout_height="0dp"
         android:layout_weight="0.6"
         android:background="@color/default_color"
+        android:clickable="true"
         android:gravity="center_vertical"
         android:singleLine="true"
         android:textColor="@android:color/white"
