--- a/TwoWayRecyclerView/genericepg/src/main/res/layout/epg_layout.xml
+++ b/TwoWayRecyclerView/genericepg/src/main/res/layout/epg_layout.xml
@@ -3,14 +3,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/timeline_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="41dp"
         android:layout_toEndOf="@+id/channels_recycler_view"
         android:background="#fff" />
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/epg_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -39,7 +39,7 @@
         android:textColor="@android:color/white"
         android:textSize="12sp" />
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/channels_recycler_view"
         android:layout_width="@dimen/epg_item_container_height"
         android:layout_height="match_parent"
