Fixed several bugs and handle program clicks
😟Fixed several bugs related to timeline width and program with syncronisation while first time appear
😟Fill program gaps if needed
🥳Handle program clicks

--- a/TwoWayRecyclerView/genericepg/src/main/res/layout/epg_layout.xml
+++ b/TwoWayRecyclerView/genericepg/src/main/res/layout/epg_layout.xml
@@ -31,6 +31,7 @@
         android:id="@+id/epg_now_indicator"
         android:layout_width="65dp"
         android:layout_height="48dp"
+        android:alpha="0.8"
         android:background="@drawable/ic_now_center"
         android:clickable="true"
         android:gravity="center"
