--- a/TwoWayRecyclerView/app/src/main/res/layout/program_custom_item.xml
+++ b/TwoWayRecyclerView/app/src/main/res/layout/program_custom_item.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <epg.duna.twowayrecyclerview.customviews.CustomLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="180dp"
     android:layout_height="@dimen/epg_item_container_height"
+    android:background="@android:color/black"
     android:clickable="true"
     android:focusable="true"
-    android:background="@android:color/black"
     android:orientation="vertical"
-    android:paddingBottom="1px"
-    android:paddingRight="1px">
+    android:paddingRight="1px"
+    android:paddingBottom="1px">
 
     <TextView
         android:id="@+id/program_title"
@@ -18,7 +19,8 @@
         android:gravity="center_vertical"
         android:singleLine="true"
         android:textColor="@android:color/white"
-        android:textSize="18sp" />
+        android:textSize="13sp"
+        app:drawableStartCompat="@drawable/ic_api_24px" />
 
     <TextView
         android:id="@+id/program_description"
